Optionals instead of null Replaced call to depricated URL constructor